--- a/private-events.html
+++ b/private-events.html
@@ -875,6 +875,24 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
 }
 
 /* EVENT FORM STYLES */
+/* VIRTUAL TOUR */
+.virtual-tour-section {
+  background: var(--dark-bg);
+  padding: 6rem 2rem;
+}
+
+.tour-container {
+  margin-top: 3rem;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 10px 40px rgba(0,0,0,0.3);
+}
+
+.tour-container iframe {
+  display: block;
+  width: 100%;
+}
+
 .event-form-section {
   background: #393739;
   padding: 6rem 2rem;
@@ -1503,6 +1521,20 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
             <img src="https://images.squarespace-cdn.com/content/60b445f2dcfc4f2bd6e8f45e/4a1ed9a6-b681-4551-9db5-7401b426b873/Living+Room+Adjacent+to+Outside+Patio.jpg?content-type=image%2Fjpeg" alt="Living Room Adjacent to Outside Patio">
             <div class="space-label">Living Room Adjacent to Outside Patio</div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- VIRTUAL TOUR -->
+    <section class="virtual-tour-section">
+      <div class="container">
+        <div class="section-header">
+          <div class="section-eyebrow">EXPERIENCE IT</div>
+          <h2 class="section-title">VIRTUAL TOUR</h2>
+          <p class="section-subtitle">Take a 360° tour of Beer Park and explore our stunning rooftop venue from the comfort of your screen.</p>
+        </div>
+        <div class="tour-container">
+          <iframe src="https://www.google.com/maps/embed?pb=!4v1741652499216!6m8!1m7!1sCAoSLEFGMVFpcE1sb0d1YjhHRXRRd0l1cGFUQl94WkRkdUZjVjh6OVFCS1lnc3Bf!2m2!1d36.11207298230462!2d-115.1721935518856!3f330.32!4f-0.46999999999999886!5f0.4000000000000002" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
       </div>
     </section>
