--- a/reservations.html
+++ b/reservations.html
@@ -42,6 +42,8 @@ body {
   font-size: 17px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: rgba(191, 38, 51, 0.2);
+  -webkit-touch-callout: none;
 }
 
 ::selection {
@@ -185,6 +187,8 @@ img {
   width: 100%;
   z-index: 999;
   border-bottom: 2px solid #000;
+  min-height: 60px;
+  box-sizing: border-box;
 }
 
 .mobile-logo img {
@@ -195,7 +199,12 @@ img {
   background: none;
   border: none;
   cursor: pointer;
-  padding: 0.5rem;
+  padding: 0.75rem;
+  min-width: 44px;
+  min-height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .hamburger-btn .bar {
@@ -915,7 +924,7 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
   }
 
   .main-content {
-    padding-top: 66px;
+    padding-top: 76px;
   }
 
   .close-menu-btn {
