--- a/visit.html
+++ b/visit.html
@@ -43,6 +43,8 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: rgba(191, 38, 51, 0.2);
+  -webkit-touch-callout: none;
 }
 
 ::selection {
@@ -195,6 +197,8 @@ img {
   z-index: 999;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
+  min-height: 60px;
+  box-sizing: border-box;
 }
 
 .mobile-logo img {
@@ -205,10 +209,12 @@ img {
   background: none;
   border: none;
   cursor: pointer;
-  padding: 0.5rem;
+  padding: 0.75rem;
+  min-width: 44px;
+  min-height: 44px;
   display: flex;
-  flex-direction: column;
-  gap: 4px;
+  align-items: center;
+  justify-content: center;
 }
 
 .hamburger-btn .bar {
@@ -812,7 +818,7 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
   }
 
   .main-content {
-    padding-top: 60px;
+    padding-top: 76px;
   }
 
   .close-menu-btn {
