--- a/events.html
+++ b/events.html
@@ -45,6 +45,8 @@ body {
   font-size: 17px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: rgba(191, 38, 51, 0.2);
+  -webkit-touch-callout: none;
 }
 
 ::selection {
@@ -183,6 +185,14 @@ img {
   padding: 1rem 1.5rem;
   background: rgba(0,0,0,0.9);
   backdrop-filter: blur(10px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  min-height: 60px;
+  box-sizing: border-box;
 }
 
 .mobile-logo img {
@@ -193,10 +203,12 @@ img {
   background: none;
   border: none;
   cursor: pointer;
-  padding: 0.5rem;
+  padding: 0.75rem;
+  min-width: 44px;
+  min-height: 44px;
   display: flex;
-  flex-direction: column;
-  gap: 4px;
+  align-items: center;
+  justify-content: center;
 }
 
 .hamburger-btn .bar {
@@ -618,8 +630,8 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
 .footer-content {
   max-width: 1200px;
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  flex-direction: row;
   gap: 3rem;
   margin-bottom: 2rem;
 }
@@ -763,7 +775,7 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
   }
 
   .main-content {
-    padding-top: 66px;
+    padding-top: 76px;
   }
 
   .close-menu-btn {
@@ -819,9 +831,8 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
   }
 
   .footer-content {
-    grid-template-columns: 1fr;
+    flex-direction: column;
     gap: 2rem;
-    text-align: center;
   }
 
   .footer-section {
