--- a/index.html
+++ b/index.html
@@ -218,11 +218,12 @@ img {
   background-color: var(--text-light);
   margin: 5px 0;
   transition: 0.3s;
+  border-radius: 2px;
 }
 
 /* Hamburger animation */
 body.sidebar-open .hamburger-btn .bar:nth-child(1) {
-  transform: rotate(-45deg) translate(-5px, 6px);
+  transform: rotate(-45deg) translateY(8px);
 }
 
 body.sidebar-open .hamburger-btn .bar:nth-child(2) {
@@ -230,7 +231,7 @@ body.sidebar-open .hamburger-btn .bar:nth-child(2) {
 }
 
 body.sidebar-open .hamburger-btn .bar:nth-child(3) {
-  transform: rotate(45deg) translate(-5px, -6px);
+  transform: rotate(45deg) translateY(-8px);
 }
 
 /* MAIN CONTENT AREA */
