--- a/events.html
+++ b/events.html
@@ -224,7 +224,7 @@ img {
 
 /* Hamburger animation */
 body.sidebar-open .hamburger-btn .bar:nth-child(1) {
-  transform: rotate(-45deg) translate(-5px, 6px);
+  transform: rotate(-45deg) translateY(8px);
 }
 
 body.sidebar-open .hamburger-btn .bar:nth-child(2) {
@@ -232,7 +232,7 @@ body.sidebar-open .hamburger-btn .bar:nth-child(2) {
 }
 
 body.sidebar-open .hamburger-btn .bar:nth-child(3) {
-  transform: rotate(45deg) translate(-5px, -6px);
+  transform: rotate(45deg) translateY(-8px);
 }
 
 /* MAIN CONTENT AREA */
