--- a/events.html
+++ b/events.html
@@ -249,7 +249,7 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
   background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('https://images.squarespace-cdn.com/content/60b445f2dcfc4f2bd6e8f45e/4ac4d712-4ab4-44cb-9688-381552b1fa75/Beer_Park_Lifestyle_24+%281%29.jpg?content-type=image%2Fjpeg');
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
+  background-attachment: scroll;
   height: 70vh;
   min-height: 500px;
   display: flex;
@@ -846,6 +846,32 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
     gap: 1.5rem;
   }
 
+  .marquee-item {
+    font-size: 1rem;
+    margin-right: 1.5rem;
+    font-weight: 500;
+  }
+
+  .sports-marquee-section {
+    padding: 2rem 0;
+  }
+
+  .marquee-container {
+    height: 3rem;
+  }
+
+  .event-schedule-container {
+    padding: 1.5rem;
+    margin-top: 2rem;
+  }
+
+  .hero {
+    background-attachment: scroll !important;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+
   .sports-grid {
     grid-template-columns: 1fr;
     gap: 1.5rem;
@@ -888,6 +914,23 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
 
   .event-content {
     padding: 1rem;
+  }
+
+  .marquee-item {
+    font-size: 0.9rem;
+    margin-right: 1rem;
+  }
+
+  .sports-marquee-section {
+    padding: 1.5rem 0;
+  }
+
+  .marquee-container {
+    height: 2.5rem;
+  }
+
+  .hero {
+    background-attachment: scroll !important;
   }
 }
 </style>
