--- a/private-events.html
+++ b/private-events.html
@@ -259,7 +259,7 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  background: linear-gradient(180deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.7) 100%), 
+  background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), 
               url('https://images.squarespace-cdn.com/content/60b445f2dcfc4f2bd6e8f45e/ee5db7ea-8857-44c2-a15a-f9c828c9487f/Beer_Park_Lifestyle_9+%281%29.jpg?content-type=image%2Fjpeg') center/cover no-repeat;
 }
 
@@ -301,7 +301,7 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
   margin-bottom: 1.5rem;
   display: inline-block;
   padding: 0.5rem 1.5rem;
-  background: rgba(190, 179, 143, 0.1);
+  background: rgba(255, 201, 71, 0.1);
   border-radius: 12px;
 }
 
@@ -1272,6 +1272,33 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
     padding: 1rem 2rem !important;
     font-size: 1rem !important;
   }
+
+  .tour-container {
+    margin-top: 2rem;
+    border-radius: 8px;
+  }
+
+  .tour-container iframe {
+    height: 300px;
+  }
+
+  .highlights-grid {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+  }
+
+  .capabilities-grid {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+
+  .highlight-card {
+    padding: 2rem 1.5rem;
+  }
+
+  .capability-item {
+    padding: 1.25rem 1.5rem;
+  }
 }
 
 /* FOOTER */
@@ -1569,6 +1596,36 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
 
   .capability-item {
     padding: 1.5rem;
+  }
+
+  .section {
+    padding: 4rem 1rem;
+  }
+
+  .form-container {
+    padding: 1.5rem 1rem;
+    margin-top: 1.5rem;
+  }
+
+  .tour-container iframe {
+    height: 250px;
+  }
+
+  .contact-content {
+    padding: 3rem 1.5rem;
+  }
+
+  .contact-details {
+    padding: 1.5rem;
+  }
+
+  .space-card {
+    aspect-ratio: 16/9;
+  }
+
+  .space-label {
+    padding: 1.5rem 1rem 1rem;
+    font-size: 1rem;
   }
 }
 </style>
