--- a/private-events.html
+++ b/private-events.html
@@ -1628,6 +1628,80 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
     font-size: 1rem;
   }
 }
+
+@media (max-width: 480px) {
+  .hero {
+    min-height: 400px;
+    height: 60vh;
+  }
+
+  .hero-content {
+    padding: 1rem;
+  }
+
+  .hero-title {
+    font-size: clamp(2.5rem, 8vw, 3.5rem);
+  }
+
+  .hero-subtitle {
+    font-size: clamp(1rem, 4vw, 1.2rem);
+  }
+
+  .section {
+    padding: 3rem 1rem;
+  }
+
+  .highlights-section,
+  .capabilities-section,
+  .spaces-section,
+  .virtual-tour-section,
+  .event-form-section {
+    padding: 4rem 1rem;
+  }
+
+  .highlight-card {
+    padding: 1.5rem 1rem;
+  }
+
+  .capability-item {
+    padding: 1rem;
+  }
+
+  .form-container {
+    padding: 1rem;
+    margin-top: 1rem;
+  }
+
+  .tour-container iframe {
+    height: 200px;
+  }
+
+  .contact-content {
+    padding: 2rem 1rem;
+  }
+
+  .contact-details {
+    padding: 1rem;
+  }
+
+  .contact-title {
+    font-size: clamp(2rem, 6vw, 3rem);
+  }
+
+  .space-card {
+    aspect-ratio: 16/9;
+  }
+
+  .space-label {
+    padding: 1rem 0.75rem 0.75rem;
+    font-size: 0.9rem;
+  }
+
+  .hero-cta {
+    padding: 1rem 1.5rem;
+    font-size: 1rem;
+  }
+}
 </style>
 </head>
 <body>
