--- a/private-events.html
+++ b/private-events.html
@@ -1527,23 +1527,41 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
     height: 65vh;
   }
 
-  .hero-ctas {
+  .hero-title {
+    font-size: clamp(2.5rem, 8vw, 4rem);
+  }
+
+  .highlights-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .capabilities-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .spaces-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .contact-split {
     flex-direction: column;
-    align-items: center;
   }
 
-  .hero-cta {
-    width: 100%;
-    max-width: 300px;
+  .contact-image {
+    min-height: 400px;
   }
 
-  .highlights-section,
-  .capabilities-section {
-    padding: 5rem 1.5rem;
+  .contact-content {
+    padding: 4rem 2rem;
   }
 
-  .capability-item {
-    padding: 1.5rem;
+  .footer-content {
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .footer-section {
+    text-align: center;
   }
 }
 
@@ -1574,134 +1592,20 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
   }
 }
 
-@media (max-width: 600px) {
-  .hero {
-    min-height: 400px;
-    height: 60vh;
-  }
-
-  .hero-ctas {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .hero-cta {
-    width: 100%;
-    max-width: 300px;
-  }
-
-  .highlights-section, .capabilities-section {
-    padding: 5rem 1.5rem;
-  }
-
-  .capability-item {
-    padding: 1.5rem;
-  }
-
-  .section {
-    padding: 4rem 1rem;
-  }
-
-  .form-container {
-    padding: 1.5rem 1rem;
-    margin-top: 1.5rem;
-  }
-
-  .tour-container iframe {
-    height: 250px;
-  }
-
-  .contact-content {
-    padding: 3rem 1.5rem;
-  }
-
-  .contact-details {
-    padding: 1.5rem;
-  }
-
-  .space-card {
-    aspect-ratio: 16/9;
-  }
-
-  .space-label {
-    padding: 1.5rem 1rem 1rem;
-    font-size: 1rem;
-  }
-}
-
 @media (max-width: 480px) {
-  .hero {
-    min-height: 400px;
-    height: 60vh;
+  .sidebar {
+    width: 100%;
   }
 
   .hero-content {
-    padding: 1rem;
-  }
-
-  .hero-title {
-    font-size: clamp(2.5rem, 8vw, 3.5rem);
-  }
-
-  .hero-subtitle {
-    font-size: clamp(1rem, 4vw, 1.2rem);
+    padding: 1.5rem;
   }
 
   .section {
-    padding: 3rem 1rem;
-  }
-
-  .highlights-section,
-  .capabilities-section,
-  .spaces-section,
-  .virtual-tour-section,
-  .event-form-section {
-    padding: 4rem 1rem;
-  }
-
-  .highlight-card {
-    padding: 1.5rem 1rem;
-  }
-
-  .capability-item {
-    padding: 1rem;
-  }
-
-  .form-container {
-    padding: 1rem;
-    margin-top: 1rem;
-  }
-
-  .tour-container iframe {
-    height: 200px;
-  }
-
-  .contact-content {
-    padding: 2rem 1rem;
-  }
-
-  .contact-details {
-    padding: 1rem;
-  }
-
-  .contact-title {
-    font-size: clamp(2rem, 6vw, 3rem);
-  }
-
-  .space-card {
-    aspect-ratio: 16/9;
-  }
-
-  .space-label {
-    padding: 1rem 0.75rem 0.75rem;
-    font-size: 0.9rem;
-  }
-
-  .hero-cta {
-    padding: 1rem 1.5rem;
-    font-size: 1rem;
+    padding: 3rem 1.5rem;
   }
 }
+
 </style>
 </head>
 <body>
