--- a/private-events.html
+++ b/private-events.html
@@ -339,21 +339,21 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
   background: linear-gradient(135deg, var(--primary-red) 0%, var(--primary-red-dark) 100%);
   color: var(--text-light);
   border: none;
-  padding: 1.3rem 3rem;
-  font-size: 1.15rem;
+  padding: clamp(0.9rem, 2vw, 1.25rem) clamp(2rem, 4vw, 3.5rem);
+  font-size: clamp(0.9rem, 1.5vw, 1.2rem);
   font-weight: 700;
   letter-spacing: 0.1em;
   text-transform: uppercase;
   cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 5px 25px rgba(0,0,0,0.5);
-  border-radius: 4px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+  box-shadow: 0 4px 20px rgba(191, 38, 51, 0.3);
+  border-radius: 8px;
   display: inline-block;
 }
 
 .hero-cta:hover {
   transform: translateY(-5px);
-  box-shadow: 0 10px 35px rgba(197, 48, 48, 0.6);
+  box-shadow: 0 8px 30px rgba(191, 38, 51, 0.5), inset 0 1px 0 rgba(255,255,255,0.2);
 }
 
 .hero-cta.secondary {
@@ -1436,6 +1436,11 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
     font-size: clamp(2.5rem, 8vw, 4rem);
   }
 
+  .hero-cta {
+    padding: 0.95rem 2rem;
+    font-size: 0.95rem;
+  }
+
   .highlights-grid {
     grid-template-columns: 1fr;
   }
@@ -1478,6 +1483,11 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
 
   .hero-content {
     padding: 1.5rem;
+  }
+
+  .hero-cta {
+    padding: 0.9rem 1.75rem;
+    font-size: 0.9rem;
   }
 
   .section {
