--- a/private-events.html
+++ b/private-events.html
@@ -24,6 +24,10 @@
   --font-body: 'Inter', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -36,7 +40,7 @@
 }
 
 #event-form {
-  scroll-margin-top: 80px;
+  scroll-margin-top: 100px;
 }
 
 body {
@@ -370,6 +374,25 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
   box-shadow: 0 8px 30px rgba(191, 38, 51, 0.5), inset 0 1px 0 rgba(255,255,255,0.2);
 }
 
+
+/* DIVIDER */
+.divider {
+  height: 1px;
+  background: linear-gradient(90deg, transparent 0%, rgba(190, 179, 143, 0.3) 50%, transparent 100%);
+  margin: 4rem 0;
+  position: relative;
+}
+
+.divider::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60px;
+  height: 1px;
+  background: var(--accent-yellow);
+}
 
 /* TICKER */
 .ticker {
@@ -1724,6 +1747,9 @@ body.sidebar-open .hamburger-btn .bar:nth-child(3) {
       </div>
     </section>
 
+    <!-- DIVIDER -->
+    <div class="divider"></div>
+
     <!-- VIRTUAL TOUR -->
     <section class="virtual-tour-section">
       <div class="container">
@@ -1993,6 +2019,24 @@ document.addEventListener('DOMContentLoaded', () => {
       subtree: true
     });
   }
+
+  // Smooth scrolling for anchor links
+  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+      e.preventDefault();
+      const target = document.querySelector(this.getAttribute('href'));
+      if (target) {
+        const headerOffset = 100; // Account for fixed header
+        const elementPosition = target.getBoundingClientRect().top;
+        const offsetPosition = elementPosition + window.pageYOffset - headerOffset;
+
+        window.scrollTo({
+          top: offsetPosition,
+          behavior: 'smooth'
+        });
+      }
+    });
+  });
 });
 </script>
 
